--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@gridsome/plugin-sitemap": "^0.2.3",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.4.0",
-    "gridsome": "^0.7.9"
+    "gridsome": "^0.7.9",
+    "netlify-cms": "^2.9.8-beta.4",
+    "gridsome-plugin-netlify-cms": "^1.0.9"
   }
 }
