--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.4.0",
     "gridsome": "^0.7.9",
-    "netlify-cms": "^2.9.8-beta.4",
-    "gridsome-plugin-netlify-cms": "^1.0.9"
+    "gridsome-plugin-netlify-cms": "^1.0.9",
+    "netlify-cms": "^2.9.7"
   }
 }
