Update Config “config”

--- a/siteConfig.json
+++ b/siteConfig.json
@@ -1,1 +1,5 @@
-{ "siteName": "Anus", "siteDescription": "Dick", "siteUrl": "Promp" }
+{
+  "siteName": "Viktor Andersen",
+  "siteDescription": "Viktor Andersen is a web developer specializing in making websites and digital solutions for individuals and small companies. Get in touch for some free consultation.",
+  "siteUrl": "https://vikfand.com"
+}
